--- a/public/css/church.CSS
+++ b/public/css/church.CSS
@@ -160,3 +160,63 @@ h2{
 i{
     padding: 1% 2.5%;
 }
+
+/* servicespage */
+
+.mainServices{
+    margin: 13vh 0vw 0vh 0vw;
+}
+
+.otherServices{
+    padding-top: 8px;
+}
+
+.card-header{
+    background-color: #b76e79;
+    padding: 0px;
+    border-style: solid;
+    border-width: 0px 0px 1px 0px;
+    border-color:gold;
+}
+
+.servicesList{
+    list-style-type: none;
+    margin: 0;
+    padding:0;
+}
+
+.card{
+    background-color: rgb(12, 12, 189);
+    border-style: solid;
+    border-color: #b76e79;
+    border-width: 1.5px;
+    color: white;
+    text-align: left;
+    height: 40vh;
+    padding:0px;
+}
+
+.card h4{
+    color: #fafafa;
+    vertical-align: middle;
+    margin: 0px;
+}
+
+#serviceCentre{
+    color: black;
+    background-color: rgb(180, 180, 234);
+}
+
+.candlesChurch{
+    width: 99vw;
+    height: 18vh;
+    object-fit: cover;
+    border-radius: 3px;
+    position: relative;
+    top: 11.5vh;
+    box-shadow: 0px 0px 7px 3.5px #F5BD02;;
+}
+
+h4{
+    color: #b76e79;
+}
